# agentgate

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  GAPS.md  INDEPENDENCE.md  LICENSE  Makefile  PRODUCT_TODO.md  QUESTIONS.md  README.md  RELEASE_GATES.md  SCORECARDS.md  SECURITY.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  run_adversarial.py
.codex/: PLANS.md  SCRATCHPAD.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  copilot-setup-steps.yml  dependency-audit.yml  docs.yml  release-artifacts.yml  scorecard.yml
demo/: agent.py  generate_teaser_gif.sh  polish_video.sh  record_demo.sh  record_screen_demo.sh  run_demo.sh  run_showcase.sh  voiceover_showcase.txt
demo/tools/: __init__.py  api_tool.py  db_tool.py  file_tool.py
deploy/staging/: seed_scenarios.json
docs/: ACCESSIBILITY_GATES.md  ADAPTIVE_RISK_TUNING.md  ARCHITECTURE.md  COMPLIANCE_MAPPINGS.md  COMPONENT_INVENTORY.md  COMPONENT_LIBRARY.md  CONTENT_STYLE_GUIDE.md  CONTRAST_COMPATIBILITY_PLAN.md  DEMO_DAY.md  DEMO_LAB.md  DEMO_SCRIPT.md  DESIGN_PARTNER_PILOT_FINDINGS.md  DOCS_HUB.md  EXEC_SUMMARY.md  FRONTEND_ARCHITECTURE.md  GET_STARTED.md  HOSTED_SANDBOX.md  IA_OWNERSHIP_MAP.md  INCIDENT_RESPONSE.md  JOURNEYS.md  KUBERNETES_DEPLOYMENT.md  MOTION_GUIDE.md  OBSERVABILITY_PACK.md  OBSERVABILITY_TRACING.md  OPERATIONAL_TRUST_LAYER.md  PERSONA_KITS.md  POLICY_TEMPLATE_LIBRARY.md  README.md  REPLAY_LAB.md  SLA_SLO.md  STAGING_RESET.md  STATUS_PAGE.md  SUPPORT_TIERS.md  TENANT_ROLLOUTS.md  TERRAFORM_DEPLOYMENT.md  THREAT_MODEL.md  TRY_NOW.md  UNDERSTANDING_AGENTGATE.md  USABILITY_TEST_PROTOCOL.md  USAGE_METERING.md  (+12 more)
docs/architecture/: architecture-flow.mmd  policy-sequence.mmd
docs/javascripts/: demo-lab.js  hosted-sandbox.js  mermaid-init.js  ux-analytics.js  ux-shell.js  ux-utils.js  workflow-shell.js  workspaces.js
docs/lab/sandbox/: flows.json
docs/plans/: 2026-02-15-hard-feature-quintet.md  2026-02-15-next-level-feature-trilogy.md  2026-02-17-release-ready-master-program.md  2026-02-20-launch-readiness-execution.md  2026-02-20-launch-readiness-todo.md  2026-02-20-ux-transformation-execution-tracker.md  2026-02-20-ux-transformation-master-plan.md  2026-02-21-prelaunch-audit-64.md
docs/showcase/: README.md  evidence-light.html  evidence.html  evidence.json  metrics.prom  summary.json
docs/status/: index.html
docs/stylesheets/: extra.css
evals/: README.md  golden_cases.json  run_evals.py
examples/: sample_evidence.html  sample_evidence.json
policies/: data.json  default.rego  default_test.rego
policies/templates/: catalog.json  ops_breakglass_expiring.rego.template  pii_strict_tokenized.rego.template  read_only_low_risk.rego.template  write_with_approval.rego.template
scripts/: adaptive_risk_tuning.py  check_docker.sh  check_mutmut.py  compliance_mappings.py  controls_audit.py  docs_ux_lint.py  doctor.py  doctor.sh  e2e-server.sh  generate_showcase_assets.sh  generate_showcase_screenshots.js  install_python_deps.sh  load_server.sh  load_smoke.py  load_test.js  product_audit.py  rego_quality.py  render_diagrams.sh  render_load_test_summary.py  replay_report.py  run_load_test.sh  scorecard.py  security_closure.py  smoke_check.py  staging_reset.py  staging_smoke.sh  support_bundle.py  try_now.py  usage_metering.py  validate_load_test_summary.py
sdk/typescript/: package.json
security/: external-assessment-findings.json
specs/: e2e-plan.md
src/agentgate/: __init__.py  __main__.py  approvals.py  client.py  credentials.py  evidence.py  gateway.py  invariants.py  killswitch.py  logging.py  main.py  metrics.py  models.py  otel.py  policy.py  policy_exceptions.py  policy_packages.py  quarantine.py  rate_limit.py  redaction.py  replay.py  rollout.py  shadow.py  showcase.py  slo.py  taint.py  traces.py  transparency.py  webhooks.py
src/agentgate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_accessibility_assets.py  test_adaptive_risk_tuning.py  test_approvals.py  test_check_mutmut.py  test_ci_config.py  test_cli.py  test_client.py  test_compliance_mappings.py  test_compose_platform_defaults.py  test_credentials.py  test_demo.py  test_demo_lab_assets.py  test_docs_ux_lint.py  test_doctor.py  test_evidence.py  test_frontend_ux_remediation.py  test_gateway.py  test_helm_chart.py  test_hosted_sandbox_assets.py  test_invariants.py  test_killswitch.py  test_load_test_summary.py  test_main.py  test_metrics.py  test_models.py  test_observability_pack.py  test_operational_trust_layer.py  test_otel.py  test_policy.py  test_policy_lifecycle.py  test_policy_packages.py  test_policy_template_library.py  test_product_audit.py  test_quarantine.py  test_rate_limit.py  test_rego_quality.py  test_release_ux_readiness_assets.py  test_replay.py  test_rollout.py  (+25 more)
tests/adversarial/: scenarios.yaml  test_evidence_integrity.py  test_input_validation.py  test_killswitch_adversarial.py  test_policy_bypass.py  test_rate_limits.py  test_rollout_security.py
tests/e2e/: _helpers.ts  a11y-regression.spec.ts  a11y.spec.ts  api-happy.spec.ts  api-negative.spec.ts  docs-ui.spec.ts  visual-regression.spec.ts
(+37 files in other folders)
