[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentgate"
version = "0.1.0"
description = "Containment-first security gateway for MCP tool calls"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  {name = "AgentGate Contributors"}
]
keywords = [
  "ai",
  "agent",
  "security",
  "mcp",
  "policy",
  "governance",
  "containment",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
  "pydantic>=2.6",
  "redis>=5.0",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
  "mypy>=1.8",
  "types-redis>=4.6.0.20241004",
  "pyyaml>=6.0",
]

[project.urls]
Documentation = "https://github.com/jasegillespie/agentgate#readme"
Repository = "https://github.com/jasegillespie/agentgate"
Issues = "https://github.com/jasegillespie/agentgate/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
