[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentgate"
version = "0.2.1"
description = "Containment-first security gateway for MCP tool calls"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  {name = "AgentGate Contributors"}
]
keywords = [
  "ai",
  "agent",
  "security",
  "mcp",
  "policy",
  "governance",
  "containment",
  "kill-switch",
  "audit",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
  "pydantic>=2.6",
  "redis>=5.0",
  "structlog>=24.1",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.3",
  "mypy>=1.8",
  "mutmut>=2.4",
  "types-redis>=4.6.0.20241004",
  "pyyaml>=6.0",
  "pre-commit>=3.6",
  "pip-audit>=2.7",
  "bandit>=1.7",
  "cyclonedx-bom>=4.0",
]
pdf = [
  "weasyprint>=61.0",
]
all = [
  "agentgate[dev,pdf]",
]

[project.scripts]
agentgate = "agentgate.__main__:main"

[project.urls]
Documentation = "https://github.com/jlov7/agentgate#readme"
Repository = "https://github.com/jlov7/agentgate"
Issues = "https://github.com/jlov7/agentgate/issues"
Changelog = "https://github.com/jlov7/agentgate/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: end-to-end API integration tests",
  "evals: golden-set evaluation tests for expected behaviors",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "UP", "N", "C4", "SIM", "RUF"]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]  # Allow assert and hardcoded passwords in tests
"tests/conftest.py" = ["E402"]
"src/agentgate/__main__.py" = ["S104", "S106"]  # Demo CLI: allow bind to 0.0.0.0 and demo approval token

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["weasyprint.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Allow assert

[tool.coverage.run]
source = ["src/agentgate"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.mutmut]
paths_to_mutate = [
  "src/agentgate/gateway.py",
  "src/agentgate/policy.py",
  "src/agentgate/rate_limit.py",
]
timeout_factor = 2.0
also_copy = [
  "policies/",
  "src/agentgate/",
]
mutate_only_covered_lines = true
pytest_add_cli_args_test_selection = [
  "tests/test_gateway.py",
  "tests/test_policy.py",
  "tests/test_rate_limit.py",
  "tests/test_tool_executor.py",
  "tests/test_killswitch.py",
  "tests/adversarial/test_rate_limits.py",
  "tests/adversarial/test_policy_bypass.py",
]
